# nikoget

./: LICENSE  NEWS.txt  README.md  pyproject.toml
src/nikoget/: __init__.py  __main__.py  common.py  select.py  utils.py
src/nikoget/plugins/: __init__.py  netease_cloud_music.py
test/: run-inplace.py
